--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SimonetiWinery</title>
+  <title>Simoneti wine cellar • სიმონეთის ღვინის მარანი</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <meta name="description" content="სიმონეთის ღვინის მარანი"/>
+<!--  should add here fb app ID-->
+  <meta property="fb:app_id" content=""/>
+  <meta property="og:image:width" content="1000px"/>
+  <meta property="og:image:height" content="1000px"/>
+  <meta property='og:description' content='სიმონეთის ღვინის მარანი'/>
+  <meta property='og:image' content='https://simonetiwinery.ge/assets/images/logo.svg'/>
+  <meta property='og:image:alt' content='Simoneti wine cellar • სიმონეთის ღვინის მარანი'/>
+  <meta property='og:url' content='https://simonetiwinery.ge/'/>
+  <meta property='og:title' content='Simoneti wine cellar • სიმონეთის ღვინის მარანი'/>
+  <meta property='og:type' content='website'/>
+  <meta property='og:site_name' content='Simoneti wine cellar • სიმონეთის ღვინის მარანი'/>
+  <meta name='author' content='George Tandilashvili'>
+  <meta name='keywords' content='saferavi, саперави, Tandila, George Tandilashvili, giorgi tandilashvili'/>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css"/>
+
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
