--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css"/>
 
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-title" content="Simoneti Wine Cellar"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+  <link rel="apple-touch-icon" href="assets/icons/icon-96x96.png" type="image/png"/>
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/icon-152x152.png" type="image/png"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/icon-192x192.png" type="image/png"/>
+  <link rel="apple-touch-icon" sizes="167x167" href="assets/icons/icon-192x192.png" type="image/png" />
+
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
